--- a/app/src/main/res/layout/fragment_like.xml
+++ b/app/src/main/res/layout/fragment_like.xml
@@ -5,6 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -68,8 +72,8 @@
                 app:lottie_loop="true"
                 app:lottie_autoPlay="true"
 
-                app:layout_constraintTop_toBottomOf="parent"
-                app:layout_constraintBottom_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/type_txt_desc"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/guideline_left"
                 app:layout_constraintEnd_toEndOf="@id/guideline_right"
                 />
@@ -79,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/dp_15"
                 android:text="아직 아무것도 찜하지 않았어요. \n 관심있는 상품의 '❤'를 눌러보세요!"
-                android:fontFamily="@font/nanum_barun_gothic"
+                android:fontFamily="@font/lexend_deca"
                 android:layout_marginTop="@dimen/dp_5"
                 android:textColor="@color/egray60"
                 android:textAlignment="center"
@@ -109,6 +113,6 @@
                 tools:listitem="@layout/item_product_list"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </androidx.core.widget.NestedScrollView>
 
 </layout>
