--- a/app/src/main/res/layout/item_product_list.xml
+++ b/app/src/main/res/layout/item_product_list.xml
@@ -142,7 +142,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_alignTop="@id/prd_auction_type"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="@dimen/dp_30"
-                        android:fontFamily="@font/nanum_barun_gothic"
+                        android:fontFamily="@font/lexend_deca"
                         android:text="진행중"
                         android:textSize="12dp" />
 
@@ -152,11 +152,12 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_height="wrap_content"
                         android:layout_below="@id/prd_status"
                         android:layout_alignBottom="@id/prd_totseqNm"
+                        android:layout_alignTop="@id/prd_totseqNm"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="@dimen/dp_30"
                         android:fontFamily="@font/lexend_deca"
                         android:text="10:00:00"
-                        android:textSize="12dp" />
+                        android:textSize="10dp" />
 
 
 
@@ -178,61 +179,55 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                             android:padding="14dp">
 
                             <LinearLayout
-                                android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1"
                                 android:orientation="horizontal">
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="제품 ID : "
                                     android:fontFamily="@font/nanum_barun_gothic"
-                                    android:textSize="12dp" />
-
-                                <TextView
-                                    android:id="@+id/prd_id"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="@{prdlist.prdId}"
-                                    android:fontFamily="@font/nanum_barun_gothic"
-                                    android:textSize="12dp"/>
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:padding="14dp">
-
-                            <LinearLayout
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
                                     android:text="제품 번호 : "
-                                    android:fontFamily="@font/nanum_barun_gothic"
                                     android:textSize="12dp" />
 
                                 <TextView
                                     android:id="@+id/material_lotno"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@{prdlist.prdNo}"
                                     android:fontFamily="@font/nanum_barun_gothic"
-                                    android:textSize="12dp"/>
+                                    android:text="@{prdlist.prdNo}"
+                                    android:textSize="12dp" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
+                                    android:text="소 : "
+                                    android:textSize="12dp" />
+
+                                <TextView
+                                    android:id="@+id/prd_workscode"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/nanum_barun_gothic"
+                                    android:text=""
+                                    android:textSize="12dp" />
 
                             </LinearLayout>
 
                         </LinearLayout>
+
+
+
 
                         <LinearLayout
                             android:layout_width="match_parent"
