--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,100 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.drawerlayout.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/main_gradient_background">
+    android:background="@drawable/main_gradient_background"
+    android:orientation="vertical">
 
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinator"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
+        <com.andrefrsousa.supertoolbar.SuperToolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:minHeight="?attr/actionBarSize"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:superToolbar_centerTitle="true"
+            app:superToolbar_useLightFont="true">
 
-            <com.andrefrsousa.supertoolbar.SuperToolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="?attr/actionBarSize"
-                android:background="@android:color/white"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:superToolbar_centerTitle="true"
-                app:superToolbar_useLightFont="true">
-
-
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/dp_55"
-                    android:id="@+id/logo"
-                    android:layout_gravity="right"
-                    android:backgroundTint="@android:color/transparent"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:layout_marginVertical="@dimen/dp_5"
-                    android:src ="@drawable/logon"
-                    />
-
-            </com.andrefrsousa.supertoolbar.SuperToolbar>
-
-        </com.google.android.material.appbar.AppBarLayout>
+<!--            <androidx.appcompat.widget.AppCompatImageButton-->
+<!--                android:id="@+id/menu_btn"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="@dimen/dp_55"-->
+<!--                android:layout_gravity="left"-->
+<!--                android:adjustViewBounds="true"-->
+<!--                android:backgroundTint="@android:color/transparent"-->
+<!--                android:scaleType="centerCrop"-->
+<!--                android:src="@drawable/ic_baseline_account_circle_24" />-->
 
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager"
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/logo"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_55"
+                android:layout_gravity="right"
+                android:adjustViewBounds="true"
+                android:backgroundTint="@android:color/transparent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/logon" />
+
+        </com.andrefrsousa.supertoolbar.SuperToolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    <nl.joery.animatedbottombar.AnimatedBottomBar
-        android:id="@+id/bottom_bar"
-        android:background="#FFF"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="@dimen/dp_10"
-        app:abb_selectedTabType="text"
-        app:abb_indicatorAppearance="round"
-        app:abb_indicatorMargin="16dp"
-        app:abb_indicatorHeight="4dp"
-        app:abb_indicatorColor="@color/lblue60"
-        app:abb_tabs="@menu/tabs"
-        app:abb_selectedIndex="1"
-        app:abb_tabColor="@color/egray40"
-        app:abb_tabColorSelected="@color/lblue60"
-        app:abb_tabColorDisabled="@color/egray40"
-        app:abb_textAppearance="@style/BottomNavigationTextStyle"
-        app:abb_iconSize="20dp"
-        app:abb_tabAnimationSelected="slide"
-        app:abb_textSize="@dimen/dp_13"
-        app:abb_tabAnimation="slide"
-        app:abb_animationInterpolator="@android:anim/overshoot_interpolator"
-
-        app:layout_constraintBottom_toBottomOf="parent"/>
+            android:orientation="vertical">
 
 
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
+            <nl.joery.animatedbottombar.AnimatedBottomBar
+                android:id="@+id/bottom_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="#FFF"
+                android:elevation="@dimen/dp_10"
+                app:abb_animationInterpolator="@android:anim/overshoot_interpolator"
+                app:abb_iconSize="20dp"
+                app:abb_indicatorAppearance="round"
+                app:abb_indicatorColor="@color/lblue60"
+                app:abb_indicatorHeight="4dp"
+                app:abb_indicatorMargin="16dp"
+                app:abb_selectedIndex="1"
+                app:abb_selectedTabType="text"
+                app:abb_tabAnimation="slide"
+                app:abb_tabAnimationSelected="slide"
+                app:abb_tabColor="@color/egray40"
+                app:abb_tabColorDisabled="@color/egray40"
+                app:abb_tabColorSelected="@color/lblue60"
+                app:abb_tabs="@menu/tabs"
+                app:abb_textAppearance="@style/BottomNavigationTextStyle"
+                app:abb_textSize="@dimen/dp_13" />
+
+        </RelativeLayout>
+
+<!--        <com.ms_square.etsyblur.BlurringView-->
+<!--            android:id="@id/blurring_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
+<!--        </com.ms_square.etsyblur.BlurringView>-->
+
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true" />
+
+    </androidx.drawerlayout.widget.DrawerLayout>
 </LinearLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true" />
-
-</androidx.drawerlayout.widget.DrawerLayout>
