--- a/app/src/main/res/layout/item_cart_bid_success_list.xml
+++ b/app/src/main/res/layout/item_cart_bid_success_list.xml
@@ -108,7 +108,7 @@
                 app:contentPadding="@dimen/dp_7"
                 app:cardUseCompatPadding="true"
                 app:cardElevation="@dimen/dp_0"
-                app:cardBackgroundColor="@color/lblue20"
+                app:cardBackgroundColor="@color/lblue40"
                 app:layout_constraintCircleRadius="@dimen/dp_10">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -125,7 +125,7 @@
                         android:textSize="@dimen/dp_6"
                         android:autoSizeMaxTextSize="@dimen/dp_8"
                         android:autoSizeMinTextSize="@dimen/dp_5"
-                        android:textColor="@color/egray80"
+                        android:textColor="@color/egray20"
                         android:fontFamily="@font/lexend_deca"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +138,7 @@
                         android:fontFamily="@font/lexend_deca"
                         android:text="10000원"
                         android:textSize="@dimen/dp_15"
-                        android:textColor="@color/egray90"
+                        android:textColor="@color/white"
                         app:layout_constraintTop_toBottomOf="@id/auc_bid_txt"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"/>
