--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,7 @@
                 app:abb_animationInterpolator="@android:anim/overshoot_interpolator"
                 app:abb_iconSize="20dp"
                 app:abb_indicatorAppearance="round"
-                app:abb_indicatorColor="@color/lblue40"
+                app:abb_indicatorColor="@color/lblue30"
                 app:abb_indicatorHeight="4dp"
                 app:abb_indicatorMargin="16dp"
                 app:abb_selectedIndex="1"
@@ -115,7 +115,7 @@
                 app:abb_tabAnimationSelected="slide"
                 app:abb_tabColor="@color/egray40"
                 app:abb_tabColorDisabled="@color/egray40"
-                app:abb_tabColorSelected="@color/lblue40"
+                app:abb_tabColorSelected="@color/lblue30"
                 app:abb_tabs="@menu/tabs"
                 app:abb_textAppearance="@style/BottomNavigationTextStyle"
                 app:abb_textSize="@dimen/dp_13" />
@@ -130,6 +130,10 @@
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:menu="@menu/navi_menu"
+            app:itemIconSize="@dimen/dp_23"
+            app:itemShapeFillColor="@color/drawer_selector"
+            app:itemIconTint="@color/drawer_text_color_selector"
+            app:itemTextColor="@color/drawer_text_color_selector"
             app:headerLayout="@layout/drawer_header"
             >
 
