--- a/app/src/main/res/menu/tabs.xml
+++ b/app/src/main/res/menu/tabs.xml
@@ -1,24 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/tab_home"
-        android:icon="@drawable/icons8_home150"
+        android:icon="@drawable/homeic"
         android:title="Home"
         android:enabled="true" />
 
     <item
         android:id="@+id/tab_list"
-        android:icon="@drawable/calendar"
+        android:icon="@drawable/calendaric"
         android:title="Schedule"
         android:enabled="true" />
     <item
         android:id="@+id/tab_cart"
-        android:icon="@drawable/shopping_cart"
+        android:icon="@drawable/shoppingic"
         android:title="Cart"
         android:enabled="true" />
 
     <item
         android:id="@+id/tab_like"
-        android:icon="@drawable/ic_heart_115"
+        android:icon="@drawable/heartic"
         android:title="Like"
         android:enabled="true" />
 
